--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,12 @@ add_library(vcpkg_deps INTERFACE)
 find_package(SDL2 CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(sdl2-image CONFIG REQUIRED)
-find_package(sdl2-ttf CONFIG REQUIRED)
+#find_package(sdl2-ttf CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 target_link_libraries(vcpkg_deps INTERFACE SDL2::SDL2 SDL2::SDL2main)
 target_link_libraries(vcpkg_deps INTERFACE imgui::imgui)
 target_link_libraries(vcpkg_deps INTERFACE SDL2::SDL2_image)
-target_link_libraries(vcpkg_deps INTERFACE SDL2::SDL2_ttf)
+#target_link_libraries(vcpkg_deps INTERFACE SDL2::SDL2_ttf)
 target_link_libraries(vcpkg_deps INTERFACE glad::glad)
 
 find_path(LUNASVG_INCLUDE_DIR NAMES lunasvg.h)
